# pmeta

./: .buildinfo  .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  genindex.html  index.html  license.html  meson.build  meson_options.txt  objects.inv  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  license.doctree
.doctrees/api/: class_view_hierarchy.doctree  define_attribute_8h_1a364ba346ebdbe45e2eb268b1506e3e59.doctree  define_attribute_8h_1a7f3f328f6f3318c3a3f33567a38ff36e.doctree  define_attribute_8h_1ad02e77bb726bd70e2d6098d4608cf816.doctree  define_attribute_8hpp_1a47f0f1f543091336158392cbac2309fb.doctree  define_attribute_8hpp_1ab15dd70df565d9ec7c90001061c14551.doctree  define_attributes_8hpp_1a364ba346ebdbe45e2eb268b1506e3e59.doctree  define_attributes_8hpp_1a3931462a569fc3015e52a0ed99904902.doctree  define_attributes_8hpp_1a403a3c74230f47e14368ee96b2d74e66.doctree  define_attributes_8hpp_1a47f0f1f543091336158392cbac2309fb.doctree  define_attributes_8hpp_1a739a7a58b55f9b7bd7ba22042322fd22.doctree  define_attributes_8hpp_1aa10e785d3d8301ca3f931c5b5b2d7447.doctree  define_attributes_8hpp_1ab15dd70df565d9ec7c90001061c14551.doctree  define_attributes_8hpp_1ad73d7bb226552f9853fad775b22381ca.doctree  define_compilers_8h_1a330a994fb763a5fd1f3022c4de991eea.doctree  define_compilers_8h_1a6693e0b64546ab44feaaec2757f8ac13.doctree  define_compilers_8h_1a86fa873eeeb5096c77a072d77cd7b368.doctree  define_compilers_8h_1ae55e1b91b8cac4f68674b3c54976bf4f.doctree  define_compilers_8hpp_1a330a994fb763a5fd1f3022c4de991eea.doctree  define_compilers_8hpp_1a6693e0b64546ab44feaaec2757f8ac13.doctree  define_compilers_8hpp_1a86fa873eeeb5096c77a072d77cd7b368.doctree  define_compilers_8hpp_1ae55e1b91b8cac4f68674b3c54976bf4f.doctree  define_constexpr_8hpp_1a403a3c74230f47e14368ee96b2d74e66.doctree  define_constexpr_8hpp_1a739a7a58b55f9b7bd7ba22042322fd22.doctree  define_constexpr_8hpp_1ab5b745ea76eaf6d5837a6c21f75a25d8.doctree  define_constexpr_8hpp_1ad73d7bb226552f9853fad775b22381ca.doctree  define_export_8h_1a72a4f4a40fc7b04b4fd09a0ab2f55984.doctree  define_export_8h_1a869c84f3c2144f34dc23d49cc7ef8bd1.doctree  define_export_8h_1ab75440f5c9710c39e92f44edb503be06.doctree  define_function_8h_1a0bce68abe6c9be324b6dda95d90effca.doctree  define_function_8h_1aa10e785d3d8301ca3f931c5b5b2d7447.doctree  define_function_8hpp_1aa10e785d3d8301ca3f931c5b5b2d7447.doctree  define_layout_8h_1a828ee35bc5374607fef810e108b40c38.doctree  define_layout_8h_1a940cde8399ced58e860d488b8720c9cc.doctree  define_platforms_8h_1a2d9fee79c49a5706e8ab67c4532e8c11.doctree  define_platforms_8h_1a3a01ef02ffd10bdd68b577a5b1dd4537.doctree  define_platforms_8h_1aa2a58f9f19e95781f42b5720ae8011be.doctree  define_platforms_8h_1abb63c0339a227a1e5183d2940dbdd11e.doctree  define_platforms_8h_1acbac97e630961e0c8f3e00bea8c92bde.doctree  define_platforms_8hpp_1a2d9fee79c49a5706e8ab67c4532e8c11.doctree  (+87 more)
.github/workflows/: docs.yml
_sources/: index.rst.txt
_sources/api/: define_attribute_8h_1a364ba346ebdbe45e2eb268b1506e3e59.rst.txt  define_attribute_8h_1a7f3f328f6f3318c3a3f33567a38ff36e.rst.txt  define_attribute_8h_1ad02e77bb726bd70e2d6098d4608cf816.rst.txt  define_attribute_8hpp_1a47f0f1f543091336158392cbac2309fb.rst.txt  (+121 more)
api/: class_view_hierarchy.html  define_attribute_8h_1a364ba346ebdbe45e2eb268b1506e3e59.html  define_attribute_8h_1a7f3f328f6f3318c3a3f33567a38ff36e.html  define_attribute_8h_1ad02e77bb726bd70e2d6098d4608cf816.html  define_attribute_8hpp_1a47f0f1f543091336158392cbac2309fb.html  define_attribute_8hpp_1ab15dd70df565d9ec7c90001061c14551.html  define_attributes_8hpp_1a364ba346ebdbe45e2eb268b1506e3e59.html  define_attributes_8hpp_1a3931462a569fc3015e52a0ed99904902.html  define_attributes_8hpp_1a403a3c74230f47e14368ee96b2d74e66.html  define_attributes_8hpp_1a47f0f1f543091336158392cbac2309fb.html  define_attributes_8hpp_1a739a7a58b55f9b7bd7ba22042322fd22.html  define_attributes_8hpp_1aa10e785d3d8301ca3f931c5b5b2d7447.html  define_attributes_8hpp_1ab15dd70df565d9ec7c90001061c14551.html  define_attributes_8hpp_1ad73d7bb226552f9853fad775b22381ca.html  define_compilers_8h_1a330a994fb763a5fd1f3022c4de991eea.html  define_compilers_8h_1a6693e0b64546ab44feaaec2757f8ac13.html  define_compilers_8h_1a86fa873eeeb5096c77a072d77cd7b368.html  define_compilers_8h_1ae55e1b91b8cac4f68674b3c54976bf4f.html  define_compilers_8hpp_1a330a994fb763a5fd1f3022c4de991eea.html  define_compilers_8hpp_1a6693e0b64546ab44feaaec2757f8ac13.html  define_compilers_8hpp_1a86fa873eeeb5096c77a072d77cd7b368.html  define_compilers_8hpp_1ae55e1b91b8cac4f68674b3c54976bf4f.html  define_constexpr_8hpp_1a403a3c74230f47e14368ee96b2d74e66.html  define_constexpr_8hpp_1a739a7a58b55f9b7bd7ba22042322fd22.html  define_constexpr_8hpp_1ab5b745ea76eaf6d5837a6c21f75a25d8.html  define_constexpr_8hpp_1ad73d7bb226552f9853fad775b22381ca.html  define_export_8h_1a72a4f4a40fc7b04b4fd09a0ab2f55984.html  define_export_8h_1a869c84f3c2144f34dc23d49cc7ef8bd1.html  define_export_8h_1ab75440f5c9710c39e92f44edb503be06.html  define_function_8h_1a0bce68abe6c9be324b6dda95d90effca.html  define_function_8h_1aa10e785d3d8301ca3f931c5b5b2d7447.html  define_function_8hpp_1aa10e785d3d8301ca3f931c5b5b2d7447.html  define_layout_8h_1a828ee35bc5374607fef810e108b40c38.html  define_layout_8h_1a940cde8399ced58e860d488b8720c9cc.html  define_platforms_8h_1a2d9fee79c49a5706e8ab67c4532e8c11.html  define_platforms_8h_1a3a01ef02ffd10bdd68b577a5b1dd4537.html  define_platforms_8h_1aa2a58f9f19e95781f42b5720ae8011be.html  define_platforms_8h_1abb63c0339a227a1e5183d2940dbdd11e.html  define_platforms_8h_1acbac97e630961e0c8f3e00bea8c92bde.html  define_platforms_8hpp_1a2d9fee79c49a5706e8ab67c4532e8c11.html  (+87 more)
cmake/: ClangFormat.cmake  InstallUtils.cmake
docs/: .gitignore  CMakeLists.txt  Doxyfile.in  conf.py  index.rst  license.rst  meson.build
src/: CMakeLists.txt
src/pmeta/: attribute.h  attribute.hpp  compilers.h  compilers.hpp  constexpr.hpp  platforms.h  platforms.hpp  standards.hpp
src/pmeta/attributes/: function.h  function.hpp  variable.h  variable.hpp
(+10 files in other folders)
